--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "noteapp",
+  "name": "personapp",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,15 +9,16 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:ui": "rm -rf build && cd ../part2-notes/ && npm run build && cp -r build ../notes-backend",
     "deploy": "git push heroku main",
-    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push && npm run deploy",    
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push && npm run deploy",
     "logs:prod": "heroku logs --tail"
   },
-  "author": "",
+  "author": "Rasmus Hyyppa",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.20"
   }
 }
