--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fly": "^4.3.17",
-    "morgan": "^1.10.0"
+    "mongoose": "^6.7.0",
+    "morgan": "^1.10.0",
+    "rest-client": "^0.1.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
